# Purchase-Agent

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260713_0001_create_identity_tables.py  20260713_0002_create_mission_table.py  20260716_0003_add_mission_scheduled_at.py  20260718_0004_add_mission_claimed_at.py  20260719_0005_add_mission_execution_attempts.py  20260719_0006_add_mission_max_execution_attempts.py  20260719_0007_add_mission_type.py  (+5 more)
app/: cli.py  dependencies.py  main.py
app/adapters/: __init__.py  (+3 more)
tests/: test_admin_auth.py  test_admin_due_missions_api.py  test_admin_stale_recovery_api.py  test_cli.py  test_database_config.py  test_docker_compose_config.py  test_domain_models.py  test_due_mission_processor.py  test_health.py  test_identities_api.py  test_identity_orm.py  test_in_memory_mission_provider_id.py  test_in_memory_mission_repository.py  test_in_memory_stale_mission_repository.py  test_mission_claimed_at_migration.py  test_mission_engine.py  test_mission_event_sequence_migration.py  test_mission_execution_attempts_migration.py  test_mission_max_execution_attempts_migration.py  test_mission_orm.py  test_mission_provider_id_migration.py  test_mission_provider_resolution_history.py  test_mission_provider_resolution_preview.py  test_mission_provider_selection.py  test_mission_state_machine.py  test_mission_type_migration.py  test_missions_api.py  test_mock_train_adapter.py  test_provider_capabilities.py  test_provider_discovery_api.py  test_provider_registry.py  test_provider_resolution_event.py  test_provider_resolution_http_errors.py  test_provider_resolver.py  test_rule_engine.py  test_sqlalchemy_identity_repository.py  test_sqlalchemy_mission_repository.py  test_storage_dependencies.py  test_train_ticket_mission_payload.py
(+56 files in other folders)
